--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ document.getElementsByTagName('head')[0].appendChild(scRec);
         <img src="assets/img/logo.png">
       </div>
       <h1 class="banner_title">
-        Check BMI Male 
+        Check BMI Male and Female
       </h1>
     </div>
   
@@ -528,7 +528,7 @@ document.getElementsByTagName('head')[0].appendChild(scRec);
       </div>
       <div class='weight_manage_link'>
         <p>
-          For more information on managing your weight visit: <a href="http://bhf.org.uk/myweight" target="_blank">bhf.org.uk/myweight</a>
+          For more information visit: <a href="https://www.iqcodegenerator.com/" target="_blank">IQ Code Generator</a>
         </p>
       </div>
 
