--- a/index.html
+++ b/index.html
@@ -3,15 +3,23 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Check BMI Male and Female</title>
-
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-  
+  <title>Check BMI Male and Female - Calculate Your Body Mass Index</title>
+  <meta name="description" content="Check your BMI (Body Mass Index) and learn how to calculate it for both males and females. Find out if you are within a healthy weight range and understand the importance of maintaining a healthy BMI.">
+  <meta name="keywords" content="BMI, Body Mass Index, BMI calculator, BMI male, BMI female, healthy weight, weight calculation, BMI formula, calculate BMI">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="Check BMI Male and Female - Calculate Your Body Mass Index">
+  <meta property="og:description" content="Check your BMI (Body Mass Index) and learn how to calculate it for both males and females. Find out if you are within a healthy weight range and understand the importance of maintaining a healthy BMI.">
+  <meta property="og:image" content="assets/img/logo.png">
+  <meta property="og:url" content="http://checkbmimale.site/">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Check BMI Male and Female - Calculate Your Body Mass Index">
+  <meta name="twitter:description" content="Check your BMI (Body Mass Index) and learn how to calculate it for both males and females. Find out if you are within a healthy weight range and understand the importance of maintaining a healthy BMI.">
+  <meta name="twitter:image" content="assets/img/logo.png">
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
   <link href="http://ajax.googleapis.com/" rel="dns-prefetch">
   <link href="assets/css/style.min.css" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43368162-2"></script>
 
   <script src="assets/components/modernizr/modernizr.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-43368162-2"></script>
